# server/microservices/auth/src/routers/auth.router.js
@@ -1,10 +1,11 @@
 import express from 'express';
-import { validateRegistration } from '../validators/authValidator.js'; // <-- Import the single validator
-import { registerUser } from '../controllers/auth.js';
+import { validateLogin, validateRegistration } from '../validators/authValidator.js'; // <-- Import the single validator
+import { loginUser, registerUser } from '../controllers/auth.controller.js';
 
 
 const router = express.Router();
 
 router.post('/register', validateRegistration, registerUser);
+router.post('/login', validateLogin, loginUser);
 
 export default router;
