# server/microservices/auth/src/validators/authValidator.js
@@ -16,3 +16,17 @@ export const validateRegistration = [
     next();
   }
 ];
+
+export const validateLogin = [
+  // 1. Validation Rules
+  body('identifier').notEmpty().withMessage('Username or email is required'),
+  body('password').notEmpty().withMessage('Password is required'),
+  // 2. Validation Check
+  (req, res, next) => {
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+      return res.status(400).json({ errors: errors.array() });
+    }
+    next();
+  }
+];
